init and basic structure

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,64 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+:root {
+  --black: 12 12 12;
+  --black-light: 38 38 38;
+  --black-dark: 6 6 6;
+
+  --header-height: 158.4px;
+  --footer-height: 56.8px;
+}
+
+main {
+  min-height: calc(100vh - var(--header-height));
+}
+
+.container {
+  max-width: 1048px;
+  padding-right: 8px;
+  padding-left: 8px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 769px) {
+  .container {
+    max-width: 1048px;
+    padding-right: 24px;
+    padding-left: 24px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media screen and (min-width: 1024px) {
+  .pretty-scrollbar::-webkit-scrollbar {
+    width: 6px;
+    border-radius: 2px;
+  }
+
+  .pretty-scrollbar::-webkit-scrollbar-track {
+    background: #f2f2f2;
+  }
+
+  .pretty-scrollbar::-webkit-scrollbar-thumb {
+    background: #e0e0e0;
+  }
+}
+
+.country-table:first-child th:first-child {
+  border-radius: 8px 0 0 0;
+}
+
+.country-table:first-child th:last-child {
+  border-radius: 0 8px 0 0;
+}
+
+.country-row:last-child > th {
+  border-bottom: none !important;
 }
