--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,3 +137,17 @@
   background-color: #3484f0 !important;
   border-color: #3484f0 !important;
 }
+
+.portal {
+  z-index: 50;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  visibility: hidden;
+}
+
+.portal > * {
+  visibility: visible;
+}
