--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -92,10 +92,10 @@ audio,
 video {
   margin: 0;
   padding: 0;
-  border: 0;
+  //border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
+  //vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article,
