--- a/src/styles/foundation/_variables.scss
+++ b/src/styles/foundation/_variables.scss
@@ -18,12 +18,6 @@ $gray: #737373;
 $gray-darker: #525252;
 $gray-dark: #404040;
 
-$ui-elements-light-border: #e5e7eb;
-$ui-elements-light-border-hover: #e5e7eb;
-
-$ui-elements-dark-border: $black;
-$ui-elements-dark-border-hover: $black-dark;
-
 $error-ligher: #e8040f;
 $error: #d8000c;
 $error-darker: #bd020c;
@@ -31,6 +25,15 @@ $error-darker: #bd020c;
 $danger-light: #e5484d;
 $danger: #da2f35;
 $danger-dark: #cb2a2f;
+
+$ui-elements-light-border: #e5e7eb;
+$ui-elements-light-border-hover: #e5e7eb;
+
+$ui-elements-dark-border: $black;
+$ui-elements-dark-border-hover: $black-dark;
+
+$ui-elements-danger-border: $danger;
+$ui-elements-danger-border-hover: $danger-dark;
 
 /*=============================================
 =                BREAKPOINTS                  =
