rewrited table using scss

--- a/src/styles/foundation/_variables.scss
+++ b/src/styles/foundation/_variables.scss
@@ -70,6 +70,7 @@ $ui-elements-sm-height: 34px;
 =                   TYPOGRAPHY                =
 =============================================*/
 
+$fs-xxs: 0.625rem; // 10px
 $fs-xs: 0.75rem; // 12px
 $fs-sm: 0.875rem; // 14px
 $fs-base: 1rem; // 16px
