--- a/src/styles/foundation/_mixins.scss
+++ b/src/styles/foundation/_mixins.scss
@@ -183,3 +183,18 @@
     }
   }
 }
+
+@mixin pretty-scrollbar {
+  &::-webkit-scrollbar {
+    width: 6px;
+    border-radius: 2px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #f2f2f2;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #e0e0e0;
+  }
+}
