Added options with SelectWithSearch for values dashboard

--- a/src/containers/values-dashboard-tools/styles.scss
+++ b/src/containers/values-dashboard-tools/styles.scss
@@ -17,6 +17,10 @@
   width: 220px;
 }
 
-.dashboard-tools__region-type-select {
+.dashboard-tools__region-select {
+  width: 190px;
+}
+
+.dashboard-tools__indicator-select {
   width: 190px;
 }
