--- a/src/ui/table/components/table-body-cell/styles.scss
+++ b/src/ui/table/components/table-body-cell/styles.scss
@@ -9,6 +9,7 @@
   border-top: none !important;
   border-right: none !important;
   border-left: none !important;
+  border-radius: 0 !important;
 
   line-height: 1.3;
 
