--- a/src/ui/table/components/table-head-cell/styles.scss
+++ b/src/ui/table/components/table-head-cell/styles.scss
@@ -9,7 +9,7 @@
 
   font-size: $fs-xxs;
   font-weight: 500;
-  border-radius: 0;
+  border-radius: 0 !important;
 
   border-top: none !important;
   border-right: none !important;
