--- a/src/containers/indicators-dashboard-table/styles.scss
+++ b/src/containers/indicators-dashboard-table/styles.scss
@@ -66,6 +66,11 @@
     width: 7.5%;
     text-align: center;
   }
+
+  .indicators-dashboard-table__more-cell {
+    font-size: $fs-xs;
+    width: 4%;
+  }
 }
 
 .indicators-dashboard-table__container {
