--- a/src/containers/indicators-dashboard-header/styles.scss
+++ b/src/containers/indicators-dashboard-header/styles.scss
@@ -2,13 +2,14 @@
 
 .dashboard-header {
   display: flex;
-  justify-content: space-between;
   padding: sp(8) 0;
+  gap: sp(2);
 }
 
 .dashboard-header__create-button {
   padding-left: sp(4);
   gap: sp(3);
+  margin-left: auto;
 
   svg {
     width: 20px;
