--- a/src/ui/icon-button/styles.scss
+++ b/src/ui/icon-button/styles.scss
@@ -25,6 +25,11 @@
     }
   }
 
+  svg {
+    width: 20px;
+    height: 20px;
+  }
+
   display: flex;
   justify-content: center;
   align-items: center;
