--- a/src/styles/foundation/_variables.scss
+++ b/src/styles/foundation/_variables.scss
@@ -98,3 +98,30 @@ $rounded-xl: 0.75rem; // 12px
 $rounded-2xl: 1rem; // 16px
 $rounded-4xl: 1.5rem; // 24px
 $rounded-full: 9999px;
+
+/*=============================================
+=                  FLEX SIZES                 =
+=============================================*/
+
+$flex-sizes: (
+  5,
+  7.5,
+  10,
+  12.5,
+  15,
+  17.5,
+  20,
+  22.5,
+  25,
+  27.5,
+  30,
+  35,
+  40,
+  45,
+  50,
+  60,
+  70,
+  80,
+  90,
+  100
+);
