--- a/src/ui/table/components/table-body-cell/styles.scss
+++ b/src/ui/table/components/table-body-cell/styles.scss
@@ -15,6 +15,18 @@
 
   padding: 0 sp(1);
 
+  &.small {
+    font-size: $fs-xs;
+  }
+
+  &.medium {
+    font-size: $fs-base;
+  }
+
+  &.large {
+    font-size: $fs-lg;
+  }
+
   &:last-child {
     padding: 0 sp(4) 0 sp(1);
   }
