--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -49,3 +49,11 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.full-width {
+  width: 100%;
+}
+
+.fit-content {
+  width: fit-content;
+}
