--- a/src/ui/table/components/table-row/styles.scss
+++ b/src/ui/table/components/table-row/styles.scss
@@ -7,3 +7,10 @@
     height: 46px;
   }
 }
+
+.table.no-semantic {
+  .table__row {
+    border-bottom: 1px solid #e5e7eb;
+    display: flex;
+  }
+}
