--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,7 +31,7 @@
 @each $size in $flex-sizes {
   .flex-#{replace-dot-with-hyphen($size)} {
     flex-grow: 0;
-    flex-shrink: 0;
+    flex-shrink: 3;
     flex-basis: $size * 1%;
   }
 }
@@ -56,4 +56,8 @@
 
 .fit-content {
   width: fit-content;
+}
+
+.one-line {
+  white-space: nowrap;
 }
