--- a/src/ui/table/components/table-head-cell/styles.scss
+++ b/src/ui/table/components/table-head-cell/styles.scss
@@ -53,3 +53,15 @@ $table-cell-sizes: (5, 7.5, 10, 12.5, 15, 17.5, 20, 22.5, 25, 27.5, 30, 40, 50);
     }
   }
 }
+
+.table.no-semantic {
+  .table__head-cell {
+    height: 44px;
+    display: flex;
+    align-items: center;
+
+    @include breakpoint("md") {
+      height: 46px;
+    }
+  }
+}
