--- a/src/ui/table/styles.scss
+++ b/src/ui/table/styles.scss
@@ -24,6 +24,20 @@ $table-cell-sizes: (5, 7.5, 10, 12.5, 15, 17.5, 20, 22.5, 25, 27.5, 30, 40, 50);
   .table-cell-right {
     text-align: right;
   }
+
+  &.no-semantic {
+    .table-cell-left {
+      justify-content: flex-start;
+    }
+
+    .table-cell-center {
+      justify-content: center;
+    }
+
+    .table-cell-right {
+      justify-content: flex-end;
+    }
+  }
 }
 
 .table__container {
