Changed text on dashboards, fixed tags and multiline data in modals

--- a/src/containers/modals/indicator-modal/styles.scss
+++ b/src/containers/modals/indicator-modal/styles.scss
@@ -6,6 +6,10 @@
   text-align: justify;
 }
 
+.indicator-modal__tags-section {
+  transform: translateY((-6px));
+}
+
 .indicator-modal__tags {
   flex-wrap: wrap;
 }
